--- a/app/assets/css/styles.css
+++ b/app/assets/css/styles.css
@@ -361,14 +361,33 @@ th {
   font-size: 25px;
   font-weight: 100; }
 
+.text-center {
+  text-align: center; }
+
+.m-top {
+  margin-top: 30px; }
+
+.m-bottom {
+  margin-bottom: 30px; }
+
+.inline-block {
+  display: inline-block; }
+
 .action-button {
   background: #FFFFFF;
   padding: 10px;
   border: 1px solid #e62739;
-  color: #e62739; }
+  color: #e62739;
+  cursor: pointer;
+  -webkit-transition: background-color 0.1s ease-out;
+  transition: background-color 0.1s ease-out; }
   .action-button:hover {
     background: #e62739;
     color: #FFFFFF; }
+
+.action-button.clicked {
+  background: #e62739;
+  color: #FFFFFF; }
 
 .action-button--success {
   background: #FFFFFF;
@@ -378,19 +397,28 @@ th {
     background: #6ed3cf;
     color: #FFFFFF; }
 
+.action-button--success.clicked {
+  background: #6ed3cf;
+  color: #FFFFFF; }
+
 .header {
   padding: 10px; }
 
 .logo {
-  display: inline-block;
+  display: block;
+  text-align: left;
   margin-bottom: 30px;
-  font-size: 25px;
-  text-transform: uppercase; }
+  font-size: 30px;
+  text-transform: uppercase;
+  border-top: 1px solid #e1e8f0;
+  border-bottom: 1px solid #e1e8f0;
+  padding-top: 10px;
+  padding-bottom: 10px; }
   @media only screen and (max-width: 479px) {
     .logo {
       display: block;
       text-align: center;
-      font-size: 20px; } }
+      font-size: 25px; } }
 
 .main-navigation {
   margin: 0;
@@ -411,6 +439,53 @@ th {
       width: 50%;
       margin-right: 0;
       margin-bottom: 15px; } }
+
+.page-list__item {
+  padding: 10px;
+  margin-bottom: 5px;
+  border: 1px solid #e1e8f0;
+  cursor: pointer;
+  -webkit-transition: background-color 0.1s ease-out;
+  transition: background-color 0.1s ease-out; }
+  .page-list__item:hover {
+    background-color: #e1e8f0; }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 500;
+  background: rgba(0, 0, 0, 0.8); }
+
+.modal {
+  position: absolute;
+  max-width: 600px;
+  width: 40%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  padding: 10px;
+  background: #FFFFFF;
+  font-size: 20px; }
+  @media only screen and (max-width: 479px) {
+    .modal {
+      width: 80%;
+      font-size: 16px; } }
+
+.form-content {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 300px;
+  width: 100%; }
+
+.full-width {
+  width: 100%; }
+
+body {
+  color: #222; }
 
 .content {
   max-width: 960px;
