--- a/app/assets/scss/partials/header.scss
+++ b/app/assets/scss/partials/header.scss
@@ -3,15 +3,21 @@
 }
 
 .logo {
-  display: inline-block;
+  display: block;
+  text-align: left;
   margin-bottom: 30px;
-  font-size: 25px;
+  font-size: 30px;
   text-transform: uppercase;
+  border-top: 1px solid $color-grey;
+  border-bottom: 1px solid $color-grey;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 
   @include respond-to-mobiles() {
     display: block;
     text-align: center;
-    font-size: 20px;
+    font-size: 25px;
   }
 }
 
